#2416 Minor improvements to PersistentEntitySaver